<resources>
    <string name="app_name">RU Pizza</string>
    <string name="order_pizza">Order Pizza</string>
    <string name="current_order">Current Order</string>
    <string name="orders_placed">Orders Placed</string>
    <string name="select_pizza">Select Pizza</string>
    <string name="pizza_option">Pizza Option</string>

    <string name="back">Back</string>
    <string name="chicago_style_pizza">Chicago Style Pizza</string>
    <string name="ny_style_pizza">New York Style Pizza</string>
    <string name="pizza_image">Pizza image</string>

    <string name="pizza_type">Pizza Type</string>
    <string name="size">Size</string>
    <string name="create_pizza">Create Pizza</string>
    <string name="crust">Crust</string>
    <string name="pizza_price">Pizza Price</string>
    <string name="available_toppings">Available Toppings</string>
    <string name="selected_toppings">Selected Toppings</string>
    <string name="add_topping">Add Topping</string>
    <string name="remove_topping">Remove Topping</string>
    <string name="add_to_order">Add to Order</string>

    <string name="empty_text"></string>
    <string name="zero_price">$0.00</string>
    <string name="zero_count">0</string>
    <string name="order_number_default">Order #</string>

    <string name="remove_selected_pizza">Remove Selected Pizza</string>
    <string name="clear_order">Clear Order</string>
    <string name="place_order">Place Order</string>

    <string name="store_orders">Store Orders</string>
    <string name="show_order_details">Show Order Details</string>
    <string name="cancel_order">Cancel Order</string>
</resources>