<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ny_style_pizza"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp" />

        <ImageView
            android:id="@+id/pizzaImageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/pizza_image"
            android:scaleType="centerCrop" />

        <Spinner
            android:id="@+id/pizzaTypeSpinner"
            android:layout_width="240dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="240dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_pizza" />

        <TextView
            android:id="@+id/crustText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_text" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_price" />

        <Spinner
            android:id="@+id/availableToppingsSpinner"
            android:layout_width="240dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addToppingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_topping" />

        <ListView
            android:id="@+id/selectedToppingsList"
            android:layout_width="280dp"
            android:layout_height="160dp"
            android:choiceMode="singleChoice" />

        <Button
            android:id="@+id/removeToppingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_topping" />

        <Button
            android:id="@+id/addToOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_order" />

    </LinearLayout>
</ScrollView>